--- a/FoodPlanner/Views/Shared/_Layout.cshtml
+++ b/FoodPlanner/Views/Shared/_Layout.cshtml
@@ -26,6 +26,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Recipes" asp-action="Index">Opskrifter</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ShoppingListApi" asp-action="GetIngredientsToPuchase">Indkøbsliste API</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MealPlans" asp-action="ShowAll">Alle madplaner</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
