--- a/FoodPlanner/Views/MealPlans/Create.cshtml
+++ b/FoodPlanner/Views/MealPlans/Create.cshtml
@@ -14,7 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="RecipeID" class="control-label"></label>
-                <select asp-for="RecipeID" class ="form-control" asp-items="ViewBag.RecipeID"></select>
+                <select asp-for="RecipeID" class ="form-control" asp-items="ViewBag.RecipeID">
+                    <option>Vælg en opskrift</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="Date" class="control-label"></label>
@@ -23,8 +25,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="Purchased" class="control-label"></label>
-                <input asp-for="Purchased" class="form-control" />
                 <span asp-validation-for="Purchased" class="text-danger"></span>
+                <select asp-for="Purchased" class="form-control" asp-items="ViewBag.Purchased">
+                </select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
