--- a/FoodPlanner/Views/MealPlans/Index.cshtml
+++ b/FoodPlanner/Views/MealPlans/Index.cshtml
@@ -6,7 +6,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Tilføj ny opskrift til madplan</a>
 </p>
 
 <div class="container">
