--- a/FoodPlanner/Views/MealPlans/Create.cshtml
+++ b/FoodPlanner/Views/MealPlans/Create.cshtml
@@ -13,18 +13,18 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="RecipeID" class="control-label"></label>
+                <label asp-for="RecipeID" class="control-label">Opskrift</label>
                 <select asp-for="RecipeID" class ="form-control" asp-items="ViewBag.RecipeID">
                     <option>Vælg en opskrift</option>
                 </select>
             </div>
             <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
+                <label asp-for="Date" class="control-label">Dato</label>
                 <input asp-for="Date" class="form-control" />
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Purchased" class="control-label"></label>
+                <label asp-for="Purchased" class="control-label">Indkøbt</label>
                 <span asp-validation-for="Purchased" class="text-danger"></span>
                 <select asp-for="Purchased" class="form-control" asp-items="ViewBag.Purchased">
                 </select>
@@ -37,7 +37,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Tilbage til oversigt</a>
 </div>
 
 @section Scripts {
